[package]
name = "dnd"
version = "0.1.0"
edition = "2021"

[dependencies]
mime = { path = "../mime" }
bitflags = "2.5.0"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten", target_os="ios", target_os="redox"))))'.dependencies]
smithay-clipboard = { git = "https://github.com/pop-os/smithay-clipboard", branch = "dnd", features = [
    "dnd",
] }
sctk = { package = "smithay-client-toolkit", git = "https://github.com/Smithay/client-toolkit", default-features = false, features = [
    "calloop",
] }
