[package]
name = "dnd"
version = "0.1.0"
edition = "2021"

[dependencies]
mime = { path = "../mime" }
bitflags = "2.5.0"
raw-window-handle = "0.6"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten", target_os="ios", target_os="redox"))))'.dependencies]
smithay-clipboard = { git = "https://github.com/pop-os/smithay-clipboard", tag = "pop-dnd-5", features = [
    "dnd",
] }
sctk = { package = "smithay-client-toolkit", version = "0.19.1", default-features = false, features = [
    "calloop",
] }
